# webots_bug_report

./: README.md
controllers/image_to_cloud/: CMakeLists.txt  image_to_cloud.cpp
protos/: Gimbal.proto
worlds/: gimbal.wbt
